issue #169 Data type info :: type name should be aligned to the left

--- a/ui/projects/spline-shared/attributes/styles/_attribute-data-type.component.scss
+++ b/ui/projects/spline-shared/attributes/styles/_attribute-data-type.component.scss
@@ -17,5 +17,5 @@
 .spline-attribute-data-type {
     display: inline-block;
     min-width: 80px;
-    text-align: center;
+    text-align: left;
 }
